src/scss/custom/_collapse.scss
$arrow-size: $font-size-base/2;

// collapse toggle
*[data-toggle="collapse"] {
  .collapse-icon::before {
    content: "";
    display: inline-block;
    width: 0;
    height: 0;
    border-top: $arrow-size solid;
    border-right: $arrow-size solid transparent;
    border-bottom: 0;
    border-left: $arrow-size solid transparent;
    vertical-align: $btn-padding-y/2;
  }
  &.collapsed {
    .collapse-icon::before {
      transform: rotate(180deg);
    }
  }
}

//collapse wrapper
.collapse-div {
  border-bottom: 1px solid $gray-100;
  .collapse-div {
    border: 1px solid $gray-100;
    border-top: 0;
  }

  //background active version
  &.collapse-background-active {
    & > .collapse-header {
      *[data-toggle="collapse"][aria-expanded="true"] {
        background-color: $primary;
        color: $white;
        border-color: $primary;
        &:after {
          color: $white;
        }
      }
    }
  }

   //background hover version
   &.collapse-background-hover {
    & > .collapse-header {
      *[data-toggle="collapse"]:hover {
        background-color: $primary;
        color: $white;
        border-color: $primary;
        &:after {
          color: $white;
        }
      }
    }
  }

  //left icon version
  &.collapse-left-icon {
    & > .collapse-header {
      *[data-toggle="collapse"] {
        &:after {
          content: '+';
          float: left;
          margin: 0 1rem 0 0;
          font-size: 1.5rem;
          line-height: 1.2rem;
          font-family: $font-family-sans-serif;
          transform: none;
        }
        &[aria-expanded="false"] {
          &:after {
            content: '-';
          }
        }
      }
    }
  }

}

//header
.collapse-header {
  position: relative;

  *[data-toggle="collapse"] {
    width: 100%;
    text-align: left;
    border: 0;
    background-color: transparent;
    border-top: 1px solid $gray-100;
    padding: 14px 24px;
    cursor: pointer;
    color: $gray-secondary;
    font-weight: 600;
    //transition: background-color 0.1s;
    &[aria-expanded="false"] {
      color: $primary;
      &:after {
        transform: scaleY(-1);
      }
    }
    &[aria-expanded="false"]:hover:after,
    &[aria-expanded="true"]:hover:after {
      text-decoration: none;
    }
    &:after {
      content: '\e810';
      font-family: "italia-icon-font";
      font-style: normal;
      font-weight: normal;
      float: right;
      text-decoration: inherit;
      font-size: 0.722rem;
      width: 1em;
      margin-right: .2em;
      margin-top: 0.389rem;
      text-align: center;
      font-variant: normal;
      text-transform: none;
      line-height: 1em;
      color: $primary-c5;
      transition: transform 0.3s;
    }
    &:hover {
      background-color: $lightgrey-c2;
      text-decoration: underline;
    }
  }
}

// body
.collapse-body {
  padding: 12px 24px 42px;
  .collapse-header button[aria-expanded="true"]:before {
    height: 0;
    width: 0;
  }
}

